--- a/Modulo2/desafio1a/estilo/style.css
+++ b/Modulo2/desafio1a/estilo/style.css
@@ -57,7 +57,7 @@ header > p {
     font-size: 1.5em;
     max-width: 600px;
     margin: auto;
-    margin-bottom: 30px;
+    padding-bottom: 50px;
     padding-left: 10px;
     padding-right: 10px;
     text-shadow: 5px 3px 5px rgba(0, 0, 0, 0.432);
