--- a/Modulo-03/desafio-2/estilo/style.css
+++ b/Modulo-03/desafio-2/estilo/style.css
@@ -1,5 +1,16 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+:root {
+    --font01: Verdana, Geneva, Tahoma, sans-serif;
+    --font-texto: 'Sriracha', cursive;
+    --font-titulo: 'Passion One', cursive;
+}
+
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +19,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font01);
 }
 
 header {
@@ -19,6 +31,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font-titulo);
+    font-size: 10vw;
 }
 
 header p {
@@ -42,6 +56,12 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font-texto);
+    font-size: 3.5vw;
+}
+
+section > p {
+    padding-bottom: 1em;
 }
 
 section.normal {
@@ -52,11 +72,25 @@ section.normal {
 section.imagem {
     background-color: rgba(0, 0, 0, 0.432);
     color: white;
+    box-shadow: inset 1px 1px 7px 0px rgba(0, 0, 0, 0.336);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.308);
-    width: 400px;
+    background-color: rgba(0, 0, 0, 0.349);
+    display: inline-block;
+    padding: 5px;
+    text-shadow: 1px 1px 2px black;
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
 }
 
 footer {
