--- a/Modulo-04/ex026/mq002/estilos/todos.css
+++ b/Modulo-04/ex026/mq002/estilos/todos.css
@@ -1,3 +1,21 @@
 @charset "UTF-8";
 
 /* Configurações gerais */
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body {
+    background-color: rgb(31, 31, 250);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100vw;
+    height: 100vh;
+}
+
+h1 {
+    padding: 10px;
+}
