--- a/Modulo-04/ex026/mq002/estilos/paisagem.css
+++ b/Modulo-04/ex026/mq002/estilos/paisagem.css
@@ -4,5 +4,5 @@
 
 body {
     background-image: url('../imagens/cev-landscape.jpg');
-    background-position: left center;
+    background-position: left bottom
 }
