--- a/Modulo-04/ex026/mq002/estilos/todos.css
+++ b/Modulo-04/ex026/mq002/estilos/todos.css
@@ -10,7 +10,7 @@
 
 html, body {
     background-color: rgb(31, 31, 250);
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     width: 100vw;
     height: 100vh;
