--- a/Modulo-04/ex026/mq005/estilos/style.css
+++ b/Modulo-04/ex026/mq005/estilos/style.css
@@ -11,7 +11,7 @@ html,body {
 }
 
 header {
-    background-color: lightgray;
+    background-color: rgb(143, 142, 142);
 }
 
 header > h1 {
@@ -25,6 +25,12 @@ span#burguer {
     color: white;
     text-align: center;
     padding: 10px;
+    cursor: pointer;
+}
+
+span#burguer:hover {
+    background-color: white;
+    color: black;
 }
 
 nav {
