--- a/Modulo-04/ex026/mq005/estilos/style.css
+++ b/Modulo-04/ex026/mq005/estilos/style.css
@@ -44,8 +44,8 @@ nav > ul {
 nav > ul > li > a {
   display: block;
   padding: 10px;
-  border-top: 2px solid rgb(189, 189, 189);
-  background-color: gray;
+  background-color: rgb(90, 90, 90);
+  border: 1px solid gray ;
   text-align: center;
   text-decoration: none;
   color: white;
