--- a/Desenvolvimento-Web/ex08-Largura-fixa/style.css
+++ b/Desenvolvimento-Web/ex08-Largura-fixa/style.css
@@ -49,7 +49,19 @@ body {
     float: right;
 }
 
+#conteudo1 {
+    width: 320px;
+    float: left;
+}
+
+#conteudo2 {
+    width: 180px;
+    float: right;
+    background-color: rgb(167, 167, 167);
+}
+
 #rodape {
     clear: both;
     background-color: gray;
+    padding: 5px;
 }
