--- a/Desenvolvimento-Web/ex11-formulario-avancado/style.css
+++ b/Desenvolvimento-Web/ex11-formulario-avancado/style.css
@@ -1,2 +1,55 @@
 @charset "UTF-8";
 
+body {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background: #643d87 url('./imagens/fundo.jpg') no-repeat top center;
+    background-size: cover;
+}
+
+#container {
+    width: 500px;
+    height: 400px;
+    background-color: rgba(255, 255, 255, 0.3);
+    margin: 0 auto;
+    margin-top: 120px;
+    border-radius: 10px;
+    text-align: center;
+   /* -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;  
+    não sei se esta obsuleto pesquisar depois*/
+}
+
+#container img {
+    width: 120px;
+    height: 120px;
+    margin-top: -60px;
+    margin-bottom: 30px;
+}
+
+input {
+    height: 40px;
+    width: 80%;
+    font-size: 18px;
+    margin-bottom: 10px;
+    background-color: #fff;
+    padding-left: 40px;
+    border: none;
+    background-repeat: no-repeat;
+    background-position: 10px;
+}
+
+.email {
+    background-image: url('./imagens/icone-usuario.png');
+}
+
+.senha {
+    background-image: url('./imagens/icone-cadeado.png');
+}
+
+.logar {
+    width: 89%;
+    height: 40px;
+    background-color: orange;
+    color: white;
+    padding: 5px 20px;
+}
