--- a/Desenvolvimento-Web/framework-boots-css/projeto-02-spotify/estilos/styles.css
+++ b/Desenvolvimento-Web/framework-boots-css/projeto-02-spotify/estilos/styles.css
@@ -1,8 +1,116 @@
 @charset "UTF-8";
 
+/* Layaut
+---------------------*/
+html,body, #home {
+    height: 100%;
+}
+
 body {
     background: url(../imagens/capa.png),
                 url(../imagens/ruido.png),
                 linear-gradient(50deg,#ff4169,#7c26f8);
     background-attachment: fixed;
+    font: Helvetica, Arial, sans-serif;
+}
+
+/* Barra de navegação
+------------------------------*/
+nav.navbar-transparente {
+    padding: 15px 0;
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: white !important;
+}
+
+.navbar-nav .nav-link:hover {
+    color: #9bf0e1 !important;
+}
+
+.navbar-light .navbar-toggler {
+    border-color: rgba(255, 255, 255, 0.5) !important;
+}
+
+.divisor {
+    width: 1px;
+    background: white;
+    margin: 12px 15px;
+}
+
+/* Capa 
+--------------*/
+.capa {
+    text-align: center;
+}
+
+.btn-custom {
+    color: white;
+    border-radius: 500px !important;
+    -webkit-border-radius: 500px !important;
+    -moz-border-radius: 500px !important;
+    text-transform: uppercase;
+    transition: background 0.4s, color 0.4s;
+    padding: 10px 20px;
+}
+
+.btn-custom-roxo {
+    background: #7c25f8;
+}
+
+.btn-custom-roxo:hover {
+    background: #6207e3;
+    color: white;
+}
+
+.btn-custom-branco {
+    border: 2px solid white !important;
+}
+
+.btn-custom-branco:hover {
+    background: white;
+    color: black;
+}
+
+div > h1 {
+    font-weight: 900;
+    letter-spacing: -0.05em;
+    margin-bottom: 50px;
+    color: white;
+}
+
+/* Extra small devices (portrait phones, less than 576px)*/
+@media (max-width: 575.98px) {
+    .btn-custom {
+        margin: 10px 15px;
+    }
+}
+
+/* Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) and (max-width: 767.98px) { 
+    div > h1 {
+        font-size: 3em;
+    }
+}
+
+/* Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) and (max-width: 991.98px) { 
+    div > h1 {
+        font-size: 4em
+    }
+}
+
+/* Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) and (max-width: 1199.98px) { 
+    div > h1 {
+        font-size: 5em;
+    }
+}
+
+/* Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) { 
+    div > h1 {
+        font-size: 6em;
+    }
 }
