projeto 02 - spotify carousel adicionado

--- a/Desenvolvimento-Web/framework-boots-css/projeto-02-spotify/estilos/styles.css
+++ b/Desenvolvimento-Web/framework-boots-css/projeto-02-spotify/estilos/styles.css
@@ -82,6 +82,12 @@ div > h1 {
     color: black;
 }
 
+/* Slide 
+---------------------*/
+.carousel-control-next, .carousel-control-prev {
+    width: 5% !important;
+}
+
 /* Extra small devices (portrait phones, less than 576px)*/
 @media (max-width: 575.98px) {
     .btn-custom {
